@@ -1,3 +1,8 @@
+Fri Dec 05 23:17:22 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: raise the plot window on gui actions (pressing the
+	  plot button) if it exists.  Add a "Reset to original zoom" menuitem.
+
 Wed Nov 19 00:29:04 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/linear_algebra/linear_algebra.gel:  Add Eigenvectors.
